--- a/src/main/webapp/WEB-INF/views/registration.html
+++ b/src/main/webapp/WEB-INF/views/registration.html
@@ -1,121 +1,132 @@
 <!DOCTYPE html>
-<html 	xmlns="http://www.w3.org/1999/xhtml" 
-		xmlns:th="http://www.thymeleaf.org" >
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head th:replace="/layout/header :: header">
-  </head>
+</head>
 
-  <body>
-	
+<body>
+
 	<nav th:replace="/layout/header :: navbar"></nav>
 
 
-    <div class="container">
-	<h2>Registrace</h2>
-    <form action="#" th:action="@{/registration/}" name="registration"
+	<div class="container">
+		<h2>Registrace</h2>
+		<form action="#" th:action="@{/registration/}" name="registration"
 			th:object="${user}" method="post" data-toggle="validator">
 			<div class="form-group">
-				<input type="hidden" th:field="*{userId}"/>
-				<label for="user.login">Username:</label>
-				<input class="form-control" type="text" th:field="*{login}" required="required"/>
-				<span th:if="${#fields.hasErrors('login')}" th:errors="*{login}">Name Error</span>
+				<input type="hidden" th:field="*{userId}" /> <label for="user.login">Username:</label>
+				<input class="form-control" type="text" th:field="*{login}"
+					required="required" /> <span th:if="${#fields.hasErrors('login')}"
+					th:errors="*{login}">Name Error</span>
 			</div>
 			<div class="form-group">
-				<label for="user.password">Password: </label> 
-				<input class="form-control" type="password" th:field="*{password}" required="required" id="passwordFirst"  data-minlength="6" data-error="Heslo musi mit 6+ znaku"/>
-				<span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Name Error</span>
+				<label for="user.password">Password: </label> <input
+					class="form-control" type="password" th:field="*{password}"
+					required="required" id="passwordFirst" data-minlength="6"
+					data-error="Heslo musi mit 6+ znaku" /> <span
+					th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Name
+					Error</span>
 				<div class="help-block with-errors"></div>
 			</div>
 			<div class="form-group">
-				<label for="user.passwordAgain">Password Again: </label> 
-				<input class="form-control" type="password" id="user.passwordAgain" required="required" data-match="#passwordFirst" data-match-error="Hesla nesedi"/>
+				<label for="user.passwordAgain">Password Again: </label> <input
+					class="form-control" type="password" id="user.passwordAgain"
+					required="required" data-match="#passwordFirst"
+					data-match-error="Hesla nesedi" />
 				<div class="help-block with-errors"></div>
 			</div>
 			<div class="form-group">
 
-				<label for="user.email">Email: </label> 
-				<input class="form-control" type="email" th:field="*{email}" data-error="Spatny format emailu" required="required"/>
+				<label for="user.email">Email: </label> <input class="form-control"
+					type="email" th:field="*{email}" data-error="Spatny format emailu"
+					required="required" />
 				<div class="help-block with-errors"></div>
-				<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Name Error</span>
-			</div>			
-			
+				<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Name
+					Error</span>
+			</div>
+
 			<div class="form-group">
 
-				<label for="user.name">Jmeno: </label> 
-				<input class="form-control" type="text" th:field="*{name}" required="required"/>
-				<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</span>
+				<label for="user.name">Jmeno: </label> <input class="form-control"
+					type="text" th:field="*{name}" required="required" /> <span
+					th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name
+					Error</span>
 			</div>
 			<div class="form-group">
-				<label for="user.surname">Prijmeni: </label> 
-				<input class="form-control" type="text" th:field="*{surname}" required="required" />
-				<span th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}">Name Error</span>
+				<label for="user.surname">Prijmeni: </label> <input
+					class="form-control" type="text" th:field="*{surname}"
+					required="required" /> <span
+					th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}">Name
+					Error</span>
 
 			</div>
-			
+
 			<div class="form-group">
 				<label for="address.city">Město: </label> <input type="text"
-					class="form-control"
-					th:field="*{address.city}" required="required"/>
-					<span th:if="${#fields.hasErrors('address.city')}" th:errors="*{address.city}">Name Error</span>
+					class="form-control" th:field="*{address.city}" required="required" />
+				<span th:if="${#fields.hasErrors('address.city')}"
+					th:errors="*{address.city}">Name Error</span>
 			</div>
-			
+
 			<div class="form-group">
-			<label for="address.district.districtId">Kraj: </label>
-			<select class="form-control" th:field="*{address.district.districtId}">
-				<option th:each="d : ${districts}" th:value="${d.districtId}"  th:text="${d.name}"
-					 >Districts</option>
-			</select>
+				<label for="address.district.districtId">Kraj: </label> <select
+					class="form-control" th:field="*{address.district.districtId}">
+					<option th:each="d : ${districts}" th:value="${d.districtId}"
+						th:text="${d.name}">Districts</option>
+				</select>
 			</div>
 
 			<div class="form-group">
 				<label for="address.street">Ulice: </label> <input type="text"
-					class="form-control"
-					th:field="*{address.street}" required="required"/>
-					<span th:if="${#fields.hasErrors('address.street')}" th:errors="*{address.street}">Name Error</span>
+					class="form-control" th:field="*{address.street}"
+					required="required" /> <span
+					th:if="${#fields.hasErrors('address.street')}"
+					th:errors="*{address.street}">Name Error</span>
 			</div>
 
 			<div class="form-group">
-				<label for="address.streetNumber">Číslo popisné: </label> <input type="text"
-					class="form-control"
-					th:field="*{address.streetNumber}" required="required" />
-					<span th:if="${#fields.hasErrors('address.streetNumber')}" th:errors="*{address.streetNumber}">Name Error</span>
+				<label for="address.streetNumber">Číslo popisné: </label> <input
+					type="text" class="form-control" th:field="*{address.streetNumber}"
+					required="required" /> <span
+					th:if="${#fields.hasErrors('address.streetNumber')}"
+					th:errors="*{address.streetNumber}">Name Error</span>
 			</div>
 
 			<div class="form-group">
 				<label for="address.zipCode">PSČ: </label> <input type="text"
-					class="form-control"
-					th:field="*{address.zipCode}" required="required" pattern="\d{5}" data-error="Spatny format PSC"/>
-					<div class="help-block with-errors"></div>
-					<span th:if="${#fields.hasErrors('address.zipCode')}" th:errors="*{address.zipCode}">Name Error</span>
+					class="form-control" th:field="*{address.zipCode}"
+					required="required" pattern="\d{5}" data-error="Spatny format PSC" />
+				<div class="help-block with-errors"></div>
+				<span th:if="${#fields.hasErrors('address.zipCode')}"
+					th:errors="*{address.zipCode}">Name Error</span>
 			</div>
 
-			<div id="dropanbula" class="dropzone form-group">
-			
-			</div>	
-			 
+			<div id="dropanbula" class="dropzone form-group"></div>
+
 			<select class="form-control" th:field="${user.role.roleId}">
-				<option th:each="r : ${roles}" th:value="${r.roleId}"  th:text="${r.description}"
-					 >Types</option>
+				<option th:each="r : ${roles}" th:value="${r.roleId}"
+					th:text="${r.description}">Types</option>
 			</select>
-			
 
-			<button id="send"  th:if="*{surname}" type="submit">Edit</button>
+
+			<button id="send" th:if="*{surname}" type="submit">Edit</button>
 			<button id="send" th:unless="*{surname}" type="submit">Registrovat</button>
-			<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
-		</form>    
+			<input type="hidden" name="${_csrf.parameterName}"
+				value="${_csrf.token}" />
+		</form>
 
 
-        <hr />  
-  <!-- Footer -->
-        <footer th:replace="/layout/footer :: footer">
-        </footer>
+		<hr />
+		<!-- Footer -->
+		<footer th:replace="/layout/footer :: footer"> </footer>
 
-    </div>
-    <!-- /.container -->
-
-	<div th:replace="/layout/footer :: scripts">
 	</div>
-	<script type="text/javascript" th:src="@{/resources/js/dropzone.min.js}"></script>
-		<script th:unless="${user.password}" th:inline="javascript">
+	<!-- /.container -->
+
+	<div th:replace="/layout/footer :: scripts"></div>
+	<script type="text/javascript"
+		th:src="@{/resources/js/dropzone.min.js}"></script>
+	<script th:unless="${user.password}" th:inline="javascript">
 	/*<![CDATA[*/
 	$(document).ready(function(){           
 		$(window).bind('beforeunload', function() {
@@ -130,7 +141,7 @@
 	});
 /*]]>*/
 </script>
-<script th:inline="javascript">
+	<script th:inline="javascript">
 	/*<![CDATA[*/
 	           
 			
@@ -195,9 +206,8 @@
 	
 	/*]]>*/
 	</script>
-	
+
 
 </body>
 
 </html>
-   
