--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -1,81 +1,101 @@
 <!DOCTYPE html>
-<html 	xmlns="http://www.w3.org/1999/xhtml" 
-		xmlns:th="http://www.thymeleaf.org" >
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head th:replace="/layout/header :: header">
-  </head>
+</head>
 
-  <body>
-	
+<body>
+
 	<nav th:replace="/layout/header :: navbar"></nav>
 
 
-    <div class="container">
-    <div class="row">
-    <div class="jumbotron">
-    <h1 class="text-center">Český hotel</h1>
+	<div class="container">
+		<div class="row">
+			<div class="jumbotron">
+				<h1 class="text-center">Český hotel</h1>
 
-	<p class="text-center"><a class="btn btn-primary btn-lg" th:href="@{/hotels(page=1,size=1)}" role="button">Prohlédnout si hotely</a></p>
-    <p class="text-center"><a class="btn btn-primary btn-lg" th:href="@{/hotels(page=1,size=1)}" role="button">Prohlédnout si hotely</a></p>
+				<p class="text-center">
+					<a class="btn btn-primary btn-lg"
+						th:href="@{/hotels(page=1,size=20,districtId=0,stars=0)}"
+						role="button">Prohlédnout si hotely</a>
+				</p>
 
-</div>
-    
-    </div>
-    
-    
-    
+			</div>
 
-        <!-- Introduction Row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">About Us
-                    <small>It's Nice to Meet You!</small>
-                </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
-            </div>
-            <a href="#" data-th-href="@{/hotel/}">Pridat Hotel</a>  
 		</div>
 
 
-        <!-- Team Members Row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Hotely</h2>
-            </div>
-            
-            
-            <div th:each="hotel : ${hotels}" >            
-             <div class="col-lg-4 col-sm-6 text-center" >
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="" />
-                <h3 th:text="${hotel.name}">
-                    <small th:text="${hotel.address.city}"></small>
-                </h3>
-                <p>Hodnoceni:  <b><span th:text="${hotel.rating}"></span></b>
-                </p>
-                <a href="#" data-th-href="@{/remove/(id=${hotel.hotelId})}" onclick="return confirm('Really remove from basket?');">Remove</a>
-                <a href="#" data-th-href="@{/detail/(id=${hotel.hotelId})}">Detail</a> 
-                <a href="#" data-th-href="@{/hotel/(id=${hotel.hotelId})}">Edit</a>                           
-            </div>
 
-			</div>      
-            
-        </div>
 
-        <hr />
+		<!-- Introduction Row -->
+		<div class="row">
+			<div class="col-lg-12">
+				<h1 class="page-header">
+					About Us <small>It's Nice to Meet You!</small>
+				</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+					Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet
+					quisquam quod totam laudantium repudiandae obcaecati ea consectetur
+					debitis velit facere nisi expedita vel?</p>
+			</div>
+			<a sec:authorize="hasAnyRole('ROLE_HOTELIER', 'ROLE_ADMIN')" href="#"
+				data-th-href="@{/hotel/}" class="btn btn-primary">Pridat Hotel</a>
+		</div>
 
-      
-    
-   
-  <!-- Footer -->
-        <footer th:replace="/layout/footer :: footer">
-        </footer>
 
-    </div>
-    <!-- /.container -->
+		<!-- Team Members Row -->
+		<div class="row">
+			<div class="col-lg-12">
+				<h2 class="page-header">Nejnavštěvovanější hotely</h2>
+			</div>
 
-	<div th:replace="/layout/footer :: scripts">
+
+			<div th:each="hotel : ${hotels}">
+				<div class="col-lg-4 col-sm-6 text-center">
+					<!--  	<img th:if="${hotel.image}" class="img-circle img-responsive img-center" th:attr="src=${hotel.image}" alt="" /> 	 	            
+                <img th:unless="${hotel.image}" class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="" /> -->
+					<img class="img-circle img-responsive img-center"
+						src="http://placehold.it/200x200" alt="" />
+					<h3 th:text="${hotel.name}">
+						<small th:text="${hotel.address.city}"></small>
+					</h3>
+					<p>
+						Hodnoceni: <b><span th:text="${hotel.rating}"></span></b>
+					</p>
+					<div sec:authorize="hasRole('ROLE_HOTELIER')">
+						<a th:if="${hotel.user.login} == ${#authentication.name}" href="#"
+							data-th-href="@{/remove/(id=${hotel.hotelId})}"
+							onclick="return confirm('Opravdu odstranit hotel?');">Remove</a>
+						<a th:if="${hotel.user.login} == ${#authentication.name}" href="#"
+							data-th-href="@{/hotel/(id=${hotel.hotelId})}">Edit</a>
+					</div>
+					<div sec:authorize="hasRole('ROLE_ADMIN')">
+						<a href="#" data-th-href="@{/remove/(id=${hotel.hotelId})}"
+							onclick="return confirm('Opravdu odstranit hotel?');">Remove</a>
+						<a href="#" data-th-href="@{/hotel/(id=${hotel.hotelId})}">Edit</a>
+					</div>
+					<a href="#" data-th-href="@{/detail/(id=${hotel.hotelId})}"
+						class="btn btn-primary">Detail</a>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<hr />
+
+
+
+
+		<!-- Footer -->
+		<footer th:replace="/layout/footer :: footer"> </footer>
+
 	</div>
+	<!-- /.container -->
+
+	<div th:replace="/layout/footer :: scripts"></div>
 
 </body>
 
 </html>
-   
