--- a/src/main/webapp/WEB-INF/views/hotels.html
+++ b/src/main/webapp/WEB-INF/views/hotels.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html 	xmlns="http://www.w3.org/1999/xhtml" 
-		xmlns:th="http://www.thymeleaf.org" >
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head th:replace="/layout/header :: header">
-  </head>
+</head>
 
-  <body>
-	
+<body>
+
 	<nav th:replace="/layout/header :: navbar"></nav>
 
 
-    <div class="container">
-        <!-- Team Members Row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Hotely</h1>
-            </div>
+	<div class="container">
+		<!-- Team Members Row -->
+		<div class="row">
+			<div class="col-lg-12">
+				<h1 class="page-header">Hotely</h1>
+			</div>
 			<div>
 				<h4>Filtr</h4>
-				
+
 				<form class="form-inline" accept-charset="utf-8" action="#"
 					th:action="@{/hotels}" th:object="${hotel}" method="post">
 					<div class="form-group">
 						<select class="form-control" th:field="${hotel.stars}">
-							<option th:value="0"> Všechny</option>
+							<option th:value="0">Všechny</option>
 							<option th:value="1">1</option>
 							<option th:value="2">2</option>
 							<option th:value="3">3</option>
@@ -37,85 +37,102 @@
 							<option th:each="d : ${districts}" th:value="${d.districtId}"
 								th:text="${d.name}">Districts</option>
 						</select>
-					</div>					
+					</div>
 					<input type="hidden" name="${_csrf.parameterName}"
-				value="${_csrf.token}" />
+						value="${_csrf.token}" />
 					<button type="submit" class="btn btn-default">Filter</button>
 				</form>
-				</div>
+			</div>
 
-				<div class="col-lg-offset-9 text-center">
+			<div class="col-lg-offset-9 text-center">
 				<form class="form-inline" accept-charset="utf-8" action="#"
-					th:action="@{/detailHotelSearch}" th:object="${hotel}" method="post">
-					<input type="text" id="w-input-search" th:field="${hotel.name}" /> <span>
+					th:action="@{/detailHotelSearch}" th:object="${hotel}"
+					method="post">
+					<input type="text" id="w-input-search" th:field="${hotel.name}" />
+					<span>
 						<button id="search" type="submit">Search</button>
-					</span>
-					<input type="hidden" name="${_csrf.parameterName}"
-								value="${_csrf.token}" />
+					</span> <input type="hidden" name="${_csrf.parameterName}"
+						value="${_csrf.token}" />
 				</form>
+			</div>
+			<br />
+
+
+			<div th:each="hotel : ${hotels}">
+				<div class="col-lg-4 col-sm-6 text-center">
+					<img class="img-circle img-responsive img-center"
+						src="http://placehold.it/200x200" alt="" />
+					<h3 th:text="${hotel.name}">
+						<small th:text="${hotel.address.city}"></small>
+					</h3>
+					<p>
+						Hodnoceni je: <b><span th:text="${hotel.rating}"></span></b>
+					</p>
+
+					<div sec:authorize="hasRole('ROLE_HOTELIER')">
+						<a th:if="${hotel.user.login} == ${#authentication.name}" href="#"
+							data-th-href="@{/remove/(id=${hotel.hotelId})}"
+							onclick="return confirm('Opravdu odstranit hotel?');">Remove</a>
+						<a th:if="${hotel.user.login} == ${#authentication.name}" href="#"
+							data-th-href="@{/hotel/(id=${hotel.hotelId})}">Edit</a>
+					</div>
+					<div sec:authorize="hasRole('ROLE_ADMIN')">
+						<a href="#" data-th-href="@{/remove/(id=${hotel.hotelId})}"
+							onclick="return confirm('Opravdu odstranit hotel?');">Remove</a>
+						<a href="#" data-th-href="@{/hotel/(id=${hotel.hotelId})}">Edit</a>
+					</div>
+					<a href="#" data-th-href="@{/detail/(id=${hotel.hotelId})}"
+						class="btn btn-primary">Detail</a>
 				</div>
-				<br />
-		
 
-			<div th:each="hotel : ${hotels}" >            
-             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="" />
-                <h3 th:text="${hotel.name}">
-                    <small th:text="${hotel.address.city}"></small>
-                </h3>
-                <p>Hodnoceni je:  <span th:text="${hotel.rating}"></span></p>
+			</div>
 
-                <a href="#" data-th-href="@{/remove/(id=${hotel.hotelId})}" onclick="return confirm('Really remove from basket?');">Remove</a>
-                <a href="#" data-th-href="@{/detail/(id=${hotel.hotelId})}">Detail</a> 
-                <a href="#" data-th-href="@{/hotel/(id=${hotel.hotelId})}">Edit</a>                           
-            </div>
+		</div>
 
-			</div>      
-            
-        </div>
-        
-        <nav>
-  <ul class="pagination">
-     <li>
-      <a th:if="${param.page[0]} &gt; 1" th:href="@{/hotels(page=1,size=${param.size[0]})}" aria-label="První strana">
-        <span class="glyphicon glyphicon-fast-backward" aria-hidden="true"></span>
-      </a>
-    </li>
-    <li>
-      <a th:if="${param.page[0]} &gt; 1" th:href="@{/hotels(page=${param.page[0]} - 1,size=${param.size[0]})}" aria-label="Předchozí">
-        <span class="glyphicon glyphicon-backward" aria-hidden="true"></span>
-      </a>
-    </li>
-    <li th:each="p : ${paginator}" th:class="${p == param.page[0]}? 'active'"><a th:href="@{/hotels(page= ${p},size=${param.size[0]})}"><span th:text="${p}" th:remove="tag"></span></a></li>
-    <li>
-      <a th:if="${param.page[0]} &lt; ${pages}" th:href="@{/hotels(page=${param.page[0]} + 1,size=${param.size[0]})}" aria-label="Další">
-        <span class="glyphicon glyphicon-forward" aria-hidden="true"></span>
-      </a>
-      <a th:if="${param.page[0]} &lt; ${pages}" th:href="@{/hotels(page=${pages},size=${param.size[0]})}" aria-label="Poslední">
-        <span class="glyphicon glyphicon-fast-forward" aria-hidden="true"></span>
-      </a>
-    </li>
-  </ul>
-</nav>
+		<nav>
+			<ul class="pagination">
+				<li><a th:if="${param.page[0]} &gt; 1"
+					th:href="@{/hotels(page=1,size=${param.size[0]}, districtId=${param.districtId[0]},stars=${param.stars[0]})}"
+					aria-label="První strana"> <span
+						class="glyphicon glyphicon-fast-backward" aria-hidden="true"></span>
+				</a></li>
+				<li><a th:if="${param.page[0]} &gt; 1"
+					th:href="@{/hotels(page=${param.page[0]} - 1,size=${param.size[0]}, districtId=${param.districtId[0]},stars=${param.stars[0]})}"
+					aria-label="Předchozí"> <span
+						class="glyphicon glyphicon-backward" aria-hidden="true"></span>
+				</a></li>
+				<li th:each="p : ${paginator}"
+					th:class="${p == param.page[0]}? 'active'"><a
+					th:href="@{/hotels(page= ${p},size=${param.size[0]}, districtId=${param.districtId[0]},stars=${param.stars[0]})}"><span
+						th:text="${p}" th:remove="tag"></span></a></li>
+				<li><a th:if="${param.page[0]} &lt; ${pages}"
+					th:href="@{/hotels(page=${param.page[0]} + 1,size=${param.size[0]}, districtId=${param.districtId[0]},stars=${param.stars[0]})}"
+					aria-label="Další"> <span class="glyphicon glyphicon-forward"
+						aria-hidden="true"></span>
+				</a> <a th:if="${param.page[0]} &lt; ${pages}"
+					th:href="@{/hotels(page=${pages},size=${param.size[0]}, districtId=${param.districtId[0]},stars=${param.stars[0]})}"
+					aria-label="Poslední"> <span
+						class="glyphicon glyphicon-fast-forward" aria-hidden="true"></span>
+				</a></li>
+			</ul>
+		</nav>
 
 
 
 
 
-        <hr />
+		<hr />
 
-      
-    
-   
-  <!-- Footer -->
-        <footer th:replace="/layout/footer :: footer">
-        </footer>
 
-    </div>
-    <!-- /.container -->
 
-	<div th:replace="/layout/footer :: scripts">
+
+		<!-- Footer -->
+		<footer th:replace="/layout/footer :: footer"> </footer>
+
 	</div>
+	<!-- /.container -->
+
+	<div th:replace="/layout/footer :: scripts"></div>
 	<script>
 	
 	$(document).ready(function() {
@@ -128,8 +145,8 @@
 			    	
 			return {      	
 			  //must convert json to javascript object before process
-			  suggestions: $.map($.parseJSON(response), function(item) {			            	
-			      return { value: item.name, data: item.hotelId };
+			  suggestions: $.map($.parseJSON(response), function(item) {		
+			      return { value: item.tagName, data: item.id  };
 			   })		            
 			 };
 			        
