--- a/src/main/webapp/WEB-INF/views/layout/footer.html
+++ b/src/main/webapp/WEB-INF/views/layout/footer.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
-<html   xmlns="http://www.w3.org/1999/xhtml"
-        xmlns:th="http://www.thymeleaf.org"
-        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-  <head>
-  </head>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<head>
+</head>
 
-  <body>
-  <!-- Footer -->
-        <footer th:fragment="footer">
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; HomLim</p>
-                </div>
-                <!-- /.col-lg-12 -->
-            </div>
-            <!-- /.row -->
-        </footer>
+<body>
+	<!-- Footer -->
+	<footer th:fragment="footer">
+		<div class="row">
+			<div class="col-lg-12">
+				<p>Copyright &copy; HomLim</p>
+			</div>
+			<!-- /.col-lg-12 -->
+		</div>
+		<!-- /.row -->
+	</footer>
 
-    
+
 	<div th:fragment="scripts">
-	<script type="text/javascript" th:src="@{/resources/js/jquery.js}"></script>
-	<script type="text/javascript" th:src="@{/resources/js/validator.js}"></script>
-	<script type="text/javascript" th:src="@{/resources/js/bootstrap.min.js}"></script>
-	<script type="text/javascript" th:src="@{/resources/js/star-rating.min.js}"></script>
-	<script type="text/javascript" th:src="@{/resources/js/fotorama.js}"></script>
-	<script type="text/javascript" th:src="@{/resources/js/bootstrap-table-all.min.js}"></script>
-	<script type="text/javascript" th:src="@{/resources/js/bootstrap-table-cs-CZ.min.js}"></script>
-	<script type="text/javascript" th:src="@{/resources/js/jquery.autocomplete.min.js}"></script>
+		<script type="text/javascript" th:src="@{/resources/js/jquery.js}"></script>
+		<script type="text/javascript" th:src="@{/resources/js/validator.js}"></script>
+		<script type="text/javascript"
+			th:src="@{/resources/js/bootstrap.min.js}"></script>
+		<script type="text/javascript"
+			th:src="@{/resources/js/star-rating.min.js}"></script>
+		<script type="text/javascript" th:src="@{/resources/js/fotorama.js}"></script>
+		<script type="text/javascript"
+			th:src="@{/resources/js/bootstrap-table-all.min.js}"></script>
+		<script type="text/javascript"
+			th:src="@{/resources/js/bootstrap-table-cs-CZ.min.js}"></script>
+		<script type="text/javascript"
+			th:src="@{/resources/js/jquery.autocomplete.min.js}"></script>
 	</div>
 </body>
 
