--- a/src/main/webapp/WEB-INF/views/layout/header.html
+++ b/src/main/webapp/WEB-INF/views/layout/header.html
@@ -1,91 +1,95 @@
 <!DOCTYPE html>
-<html   xmlns="http://www.w3.org/1999/xhtml"
-        xmlns:th="http://www.thymeleaf.org"
-        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-  <head th:fragment="header">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="author" content="Homolka Lihm " />
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<head th:fragment="header">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="description" content="" />
+<meta name="author" content="Homolka Lihm " />
 
-    <title>Hotely</title>
-	<link rel="stylesheet" type="text/css" media="all" 
-          href="../../resources/css/bootstrap.min.css" th:href="@{/resources/css/bootstrap.min.css}" />
-    
-    	<link rel="stylesheet" type="text/css" media="all" 
-          href="../../resources/css/round-about.css" th:href="@{/resources/css/round-about.css}" />
-    <link rel="stylesheet" type="text/css" media="all" 
-          href="../../resources/css/star-rating.min.css" th:href="@{/resources/css/star-rating.min.css}" />  
-    <link rel="stylesheet" type="text/css" media="all" 
-          href="../../resources/css/basic.min.css" th:href="@{/resources/css/basic.min.css}" />  
-    <link rel="stylesheet" type="text/css" media="all" 
-          href="../../resources/css/dropzone.min.css" th:href="@{/resources/css/dropzone.min.css}" />           
-          
-          <link rel="stylesheet" type="text/css" media="all" 
-          href="../../reources/css/loginModal.css" th:href="@{/resources/css/loginModal.css}" />  
-          
-          <link rel="stylesheet" type="text/css" media="all" 
-          href="../../reources/css/bootstrap-table.min.css" th:href="@{/resources/css/bootstrap-table.min.css}" />  
-          
-          
-          <link  href="../../reources/css/fotorama.css" th:href="@{/resources/css/fotorama.css}" rel="stylesheet" />                
-  </head>		
+<title>Hotely</title>
+<link rel="stylesheet" type="text/css" media="all"
+	href="../../resources/css/bootstrap.min.css"
+	th:href="@{/resources/css/bootstrap.min.css}" />
 
-  <body>
-  
-      <!-- Static navbar -->
-       <!-- Navigation -->
-    <nav th:fragment="navbar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <a class="navbar-brand" th:href="@{/}">Český hotel</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a th:href="@{/hotels(page=1,size=20,districtId=0,stars=0)}">Vsechny hotely</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                </ul>
-                <ul sec:authorize="isAuthenticated()" class="nav navbar-nav navbar-right">
-                    
-              <form th:action="@{/logout}" method="post" id="logoutForm">
-			<input type="hidden" name="${_csrf.parameterName}"
-				value="${_csrf.token}" />
-		</form>
-		<script>
+<link rel="stylesheet" type="text/css" media="all"
+	href="../../resources/css/round-about.css"
+	th:href="@{/resources/css/round-about.css}" />
+<link rel="stylesheet" type="text/css" media="all"
+	href="../../resources/css/star-rating.min.css"
+	th:href="@{/resources/css/star-rating.min.css}" />
+<link rel="stylesheet" type="text/css" media="all"
+	href="../../resources/css/basic.min.css"
+	th:href="@{/resources/css/basic.min.css}" />
+<link rel="stylesheet" type="text/css" media="all"
+	href="../../resources/css/dropzone.min.css"
+	th:href="@{/resources/css/dropzone.min.css}" />
+
+<link rel="stylesheet" type="text/css" media="all"
+	href="../../reources/css/loginModal.css"
+	th:href="@{/resources/css/loginModal.css}" />
+
+<link rel="stylesheet" type="text/css" media="all"
+	href="../../reources/css/bootstrap-table.min.css"
+	th:href="@{/resources/css/bootstrap-table.min.css}" />
+
+
+<link href="../../reources/css/fotorama.css"
+	th:href="@{/resources/css/fotorama.css}" rel="stylesheet" />
+</head>
+
+<body>
+
+	<!-- Static navbar -->
+	<!-- Navigation -->
+	<nav th:fragment="navbar"
+		class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		<div class="container">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<a class="navbar-brand" th:href="@{/}">Český hotel</a>
+			</div>
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse"
+				id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li><a href="#">O nás</a></li>
+					<li><a
+						th:href="@{/hotels(page=1,size=20,districtId=0,stars=0)}">Vsechny
+							hotely</a></li>
+					<li sec:authorize="hasRole('ROLE_ADMIN')"><a
+						th:href="@{/admin/users}">Uživatelé</a></li>
+				</ul>
+				<ul sec:authorize="isAuthenticated()"
+					class="nav navbar-nav navbar-right">
+
+					<form th:action="@{/logout}" method="post" id="logoutForm">
+						<input type="hidden" name="${_csrf.parameterName}"
+							value="${_csrf.token}" />
+					</form>
+					<script>
 			function formSubmit() {
 				document.getElementById("logoutForm").submit();
 			}
 		</script>
-		<li>
-                        <a sec:authentication="name" href="#" th:href="@{/detailUser}">Ahoj</a>
-                        </li> <li>
-                        <a href="javascript:formSubmit()"> Logout</a>
-                    </li>
-                    </ul>
-                    <ul sec:authorize="isAnonymous()" class="nav navbar-nav navbar-right">                     
-                    <li>                   
-                        <a th:href="@{/registration}">Registrovat</a>
-                    </li><li>
-                        <a th:href="@{/login}">Přihlásit</a>
-                    </li>
-                </ul>
-                
-            </div>
-            <!-- /.navbar-collapse -->
-            
-        </div>
-        <!-- /.container -->
-    </nav>
+					<li><a sec:authentication="name" href="#"
+						th:href="@{/detailUser}">Ahoj</a></li>
+					<li><a href="javascript:formSubmit()"> Logout</a></li>
+				</ul>
+				<ul sec:authorize="isAnonymous()"
+					class="nav navbar-nav navbar-right">
+					<li><a th:href="@{/registration}">Registrovat</a></li>
+					<li><a th:href="@{/login}">Přihlásit</a></li>
+				</ul>
 
-  </body>
+			</div>
+			<!-- /.navbar-collapse -->
+
+		</div>
+		<!-- /.container -->
+	</nav>
+
+</body>
 
 </html>
